--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 
 .idea/vcs.xml
 .idea/workspace.xml
+out/production/Enrollment/CreateEnrollee$FirstNameSorter.class
+out/production/Enrollment/CreateEnrollee$LastNameSorter.class
+out/production/Enrollment/CreateEnrollee.class
+out/production/Enrollment/CreateEnrolleeTest.class
+out/production/Enrollment/Enrollee.class
+out/production/Enrollment/EnrolleeInsuranceCompanySplit.class
+out/production/Enrollment/Main.class
+out/production/Enrollment/ReadInFile.class
+Enrollment.iml
+.idea/workspace.xml
